1998-11-24  Stefan Taferner  <stefan@idefix>

	* Pop: does not stop pop retrieval now when pop server does
	not understand LAST command.

1998-11-15  Stefan Taferner  <taferner@kde.org> (KMail-1.0.7)

	* Headers: now current message is not reset when reading mails
	and checking for new messages meanwhile.

	* Pop: added configuration option for leave-mail-on-server.

	* Pop: Fixed problems in pop authentication code.

	* Pop: Enabled POP3 LAST command which was commited to
	kdesupport some time ago.

1998-11-15  Alex Zepeda  <garbanzo@hooked.net>

	* kfontutils.cpp (kfontToStr): Cast two const char *'s to char *'s as
	egcs seems to barf without the casts.

1998-11-10  Harri Porten  <porten@kde.org>

	* Removed hardcoded localkdedir()

	* Let KApplication() do the job of creating ~/.kde/share/config

1998-10-31  Stefan Taferner  <taferner@kde.org> (KMail-1.0.6)

	* Fixed: crash when fetching new mail and inbox folder
	is not accessible.

1998-10-21  Lars Knoll <knoll@mpi-hd.mpg.de>
	* fixed a bug in the support for pgp-2.6

1998-10-08  Stefan Taferner  <taferner@kde.org> (KMail-1.0.5)

	* Sorting messages: replaced sorting algorithm, which caused
	random hangs, with stock qsort -- hopefully working now ;-)

	* Fixed: folder list went out of scope (current item pointing to
	nowhere) when folder was deleted.

	* Composer: fixed broken confirm-close dialog.

	* Increased version to better match upcoming Kde-1.1 release.

	* Added call to kapp->quit() when last window is closed.

1998-10-05  Lars Knoll <knoll@mpi-hd.mpg.de>
	* Added new pgp classes. They should fix a lot of problems
	with the current support of pgp5.0 and pgp2.6, and fix all
	security problems with the old versions of kpgp, since all
	comunication with pgp (including the passphrase) is done via
	pipes.
	
1998-09-26  Stefan Taferner  <taferner@kde.org> (KMail-0.8.1)

	* Fixed crash upon close of a main- or composer window.
	Bug seems to be introduced by changed behaviour of KTMainWindow.