@@ -3,6 +3,6 @@
 #ifndef kmversion_h
 #define kmversion_h
 
-#define KMAIL_VERSION "1.0.7"
+#define KMAIL_VERSION "1.0.8"
 
 #endif /*kmversion_h*/
